--- a/css/style.css
+++ b/css/style.css
@@ -957,6 +957,7 @@ header .header_info .header_right .login .popup .pop_info .language_btn {
     align-items: center;
   }
   header .header_info .header_right .language ul {
+    display: block;
     position: relative;
     top: unset;
     right: unset;
@@ -2722,6 +2723,63 @@ ul.cardlist-pagination li a:hover:not(.active) {
 /**/
 /**/
 
+/* 儀錶板點數 */
+.dashboard_detail{
+  display: flex;
+  justify-content: space-between;
+  padding: 20px;
+}
+.dashboard_detail .item{
+  display: flex;
+  align-items: center;
+}
+.dashboard_detail .item img{
+  width: 42px;
+  margin-right: 20px;
+}
+.dashboard_detail .item .text{
+  text-align: right;
+}
+.dashboard_detail .item.blue .text{
+  color: #005bab;
+}
+.dashboard_detail .item.yellow .text{
+  color: #f29600;
+}
+.dashboard_detail .item.dark_blue .text{
+  color: #0b318f;
+}
+.dashboard_detail .item .text .title{
+  font-size: 16px;
+}
+.dashboard_detail .item .text .num{
+  font-size: 24px;
+  font-weight: 700;
+}
+@media (max-width: 992px) {
+  .dashboard_detail{
+    flex-wrap: wrap;
+    padding: 10px 20px;
+  }
+  .dashboard_detail .item{
+    flex: 0 0 100%;
+    justify-content: center;
+    margin-bottom: 20px;
+  }
+  .dashboard_detail .item:nth-child(1){
+    justify-content: flex-start;
+  }
+  .dashboard_detail .item:last-child{
+    justify-content: flex-end;
+    margin-bottom: 0;
+  }
+  .dashboard_detail .item .text{
+    flex: 0 0 97px;
+  }
+}
+
+
+
 .modal-close {
   position: absolute;
   z-index: 999;
@@ -3014,20 +3072,15 @@ ul.cardlist-pagination li a:hover:not(.active) {
   width: 100%;
   padding-bottom: 64%;
   transform-style: preserve-3d;
-  transform: translateZ(1000px) rotateY(0deg);
+  transform: rotateY(0deg);
   transition-duration: 0.5s;
   position: relative;
   cursor: pointer;
 }
 .card_container .card_con.active {
-  transform: translateZ(1000px) rotateY(-180deg);
+  transform: rotateY(-180deg);
 }
-.card_container .card_con.active .card_front {
-  z-index: 0;
-}
-.card_container .card_con.active .card_back {
-  z-index: 1;
-}
+
 /*卡片正片*/
 .card_container .card_con .card_front {
   padding-bottom: 64%;
@@ -3036,10 +3089,11 @@ ul.cardlist-pagination li a:hover:not(.active) {
   position: absolute;
   width: 100%;
   border-radius: 5px;
-  z-index: 1;
   transform: rotateY(0deg);
   transform-origin: center;
   transition-duration: 0.3s;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
 }
 .card_container .card_con .card_front .card_block {
   position: absolute;
@@ -3062,11 +3116,12 @@ ul.cardlist-pagination li a:hover:not(.active) {
   position: absolute;
   width: 100%;
   height: 100%;
-  z-index: 0;
   border-radius: 5px;
   transform: rotateY(-180deg);
   transform-origin: center;
   transition-duration: 0.3s;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
 }
 .card_container .card_con .card_back .card_block {
   position: absolute;
@@ -3099,15 +3154,7 @@ ul.cardlist-pagination li a:hover:not(.active) {
 .card_container .btn {
   width: 100%;
 }
-@media (max-width: 992px) {
-  .card_container .card_con.active {
-    transform: unset;
-    transition-duration: unset;
-  }
-  .card_container .card_con .card_back {
-    transform: rotateY(0deg);
-  }
-}
+
 
 /**/
 .TaiwancardBack {
@@ -3698,9 +3745,10 @@ button.bg-light:hover {
   height: 24px;
   margin: 0 -5px;
 }
+
 .search-icon {
-  width: auto;
-  height: 42px;
+  height: 25px;
+  padding: 0 20px 0 15px;
   margin: -20px;
 }
 .input-group {
