--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,8 @@ img,
 table {
   max-width: 100%;
 }
-table .td,table .th{
+table .td,
+table .th {
   border: 1px solid #333;
   padding: 5px;
 }
@@ -1202,12 +1203,22 @@ header .header_info .header_right .login .popup .pop_info .language_btn {
   margin-bottom: 40px;
 }
 .header-cover .btn-join-search {
-  background: transparent
-    linear-gradient(0deg, #0d3386 0%, #084c9c 37%, #0080ca 100%) 0% 0% no-repeat
-    padding-box;
+  background: linear-gradient(0deg, #0d3386 0%, #084c9c 37%, #0080ca 100%);
   border-radius: 10px;
   opacity: 1;
   color: #fff;
+  display: flex;
+  align-items: center;
+  width: 150px;
+  margin: 0 auto;
+  font-size: 1.35rem;
+  padding: .5rem;
+}
+.header-cover .btn-join-search img {
+  margin-right: 5px;
+  width: 25px;
+  height: 25px;
+  display: block;
 }
 .header-cover h2 {
   font-size: 32px;
@@ -2724,61 +2735,59 @@ ul.cardlist-pagination li a:hover:not(.active) {
 /**/
 
 /* 儀錶板點數 */
-.dashboard_detail{
+.dashboard_detail {
   display: flex;
   justify-content: space-between;
   padding: 20px;
 }
-.dashboard_detail .item{
+.dashboard_detail .item {
   display: flex;
   align-items: center;
 }
-.dashboard_detail .item img{
+.dashboard_detail .item img {
   width: 42px;
   margin-right: 20px;
 }
-.dashboard_detail .item .text{
+.dashboard_detail .item .text {
   text-align: right;
 }
-.dashboard_detail .item.blue .text{
+.dashboard_detail .item.blue .text {
   color: #005bab;
 }
-.dashboard_detail .item.yellow .text{
+.dashboard_detail .item.yellow .text {
   color: #f29600;
 }
-.dashboard_detail .item.dark_blue .text{
+.dashboard_detail .item.dark_blue .text {
   color: #0b318f;
 }
-.dashboard_detail .item .text .title{
+.dashboard_detail .item .text .title {
   font-size: 16px;
 }
-.dashboard_detail .item .text .num{
+.dashboard_detail .item .text .num {
   font-size: 24px;
   font-weight: 700;
 }
 @media (max-width: 992px) {
-  .dashboard_detail{
+  .dashboard_detail {
     flex-wrap: wrap;
     padding: 10px 20px;
   }
-  .dashboard_detail .item{
+  .dashboard_detail .item {
     flex: 0 0 100%;
     justify-content: center;
     margin-bottom: 20px;
   }
-  .dashboard_detail .item:nth-child(1){
+  .dashboard_detail .item:nth-child(1) {
     justify-content: flex-start;
   }
-  .dashboard_detail .item:last-child{
+  .dashboard_detail .item:last-child {
     justify-content: flex-end;
     margin-bottom: 0;
   }
-  .dashboard_detail .item .text{
+  .dashboard_detail .item .text {
     flex: 0 0 97px;
   }
 }
-
-
 
 .modal-close {
   position: absolute;
@@ -3154,7 +3163,6 @@ ul.cardlist-pagination li a:hover:not(.active) {
 .card_container .btn {
   width: 100%;
 }
-
 
 /**/
 .TaiwancardBack {
@@ -3746,11 +3754,6 @@ button.bg-light:hover {
   margin: 0 -5px;
 }
 
-.search-icon {
-  height: 25px;
-  padding: 0 20px 0 15px;
-  margin: -20px;
-}
 .input-group {
   padding-top: 30px;
   position: relative;
